evdev/src/main/cpp/libevdev/libevdev-uinput.h

struct libevdev_uinput;
enum libevdev_uinput_open_mode {
    LIBEVDEV_UINPUT_OPEN_MANAGED = -2  
};
int libevdev_uinput_create_from_device(const struct libevdev *dev,
                                       int uinput_fd,
                                       struct libevdev_uinput **uinput_dev);
void libevdev_uinput_destroy(struct libevdev_uinput *uinput_dev);
int libevdev_uinput_get_fd(const struct libevdev_uinput *uinput_dev);
const char *libevdev_uinput_get_syspath(struct libevdev_uinput *uinput_dev);
const char *libevdev_uinput_get_devnode(struct libevdev_uinput *uinput_dev);
int libevdev_uinput_write_event(const struct libevdev_uinput *uinput_dev,
                                unsigned int type,
                                unsigned int code,
                                int value);